UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_OrderMgmtFallout__mdt/ftr_OrderMgmtFallout__mdt.object-meta.xml
<CustomObject>
    <label>Order Management Fallout</label>
    <pluralLabel>Order Management Fallout</pluralLabel>
</CustomObject>