UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_OrderMgmtFallout__mdt/fields/Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Name__c</fullName>
    <label>Interface Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>