UCF-APR2.4/ftr main/force-app/main/default/objects/ftr_OrderMgmtFallout__mdt/fields/System_Name__c.field-meta.xml
<CustomField>
    <fullName>System_Name__c</fullName>
    <label>System Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>